<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:fontFamily="@font/rex_bold"
        android:textSize="20sp"
        android:text="@string/dialognewgame"
        android:textAppearance="?android:attr/textAppearanceLarge">
    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnYes"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:background="@drawable/button_pressed"
            android:fontFamily="@font/rex_bold"
            android:text="@string/yes">
        </Button>
        <Button
            android:id="@+id/btnNo"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:background="@drawable/button_pressed"
            android:fontFamily="@font/rex_bold"
            android:text="@string/no">
        </Button>
    </LinearLayout>
</LinearLayout>