<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/backFromSettings"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_pressed"
                android:fontFamily="@font/rex_bold"
                android:text="@string/back"
                android:textColor="@color/colorTextButton"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/settingsName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rex_bold"
                    android:textColor="@color/colorNameApp"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:text="@string/settingsName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/settingsOffOnSound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rex_bold"
                    android:textColor="@color/colorNameApp"
                    android:layout_marginBottom="20dp"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:text="@string/settingsOffOnSound" />

                <Switch
                    android:id="@+id/settingsOnOff"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rex_bold"
                    android:textColor="@color/colorNameApp"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:text="@string/settingsOnOff"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rex_bold"
                    android:textColor="@color/colorNameApp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:text="@string/settingsRadio" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">


                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">

                        <RadioButton
                            android:id="@+id/radioGaga"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rex_bold"
                            android:textColor="@color/colorNameApp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:textSize="17sp"
                            android:checked="true"

                            android:text="@string/radio_gaga" />

                        <RadioButton
                            android:id="@+id/radioBirusa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rex_bold"
                            android:textColor="@color/colorNameApp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:textSize="17sp"
                            android:text="@string/radio_birusa" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>